# algo-s

./: Makefile  README.md  algo-s.cabal
app/: Actions.hs  Opts.hs  Types.hs
specs/Data/Sample/: AlgoSSpec.hs
specs/Data/Sample/AlgoS/: TypesSpec.hs
src/Data.Sample.AlgoS/Actions/: Default.hs
src/Data/Sample/: AlgoS.hs
src/Data/Sample/AlgoS/: Types.hs
