name:                algo-s
version:             0.0.0.0
synopsis:            An implementation of Knuth's algorithm S.
description:         An implementaiton of Knuth's algorithm S
                     (https://rosettacode.org/wiki/Knuth%27s_algorithm_S)
                     with a command-line utility for sampling from STDIN.
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@gmail.com
copyright:           2016 Eric Rochester
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Sample.AlgoS
                     , Data.Sample.AlgoS.Types
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , foldl
                     , mwc-random
                     , primitive
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sample
  main-is:             Main.hs
  other-modules:       Actions
                     , Opts
                     , Types
  -- other-extensions:    
  build-depends:       base >=4.8 && <5
                     , algo-s
                     , bytestring
                     , errors
                     , mwc-random
                     , optparse-applicative
  hs-source-dirs:      app
  ghc-options:         -threaded
                       -rtsopts
                       "-with-rtsopts=-N"
                       -- -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
  default-language:    Haskell2010

test-suite algo-s-specs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts
  hs-source-dirs:      specs
  main-is:             Specs.hs
  other-modules:         Data.Sample.AlgoSSpec
  build-depends:         base
                       , algo-s
                       , errors
                       , foldl
                       , mwc-random
                       , QuickCheck
                       , smallcheck
                       , hspec
  default-language:    Haskell2010

benchmark algo-s-bench
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
                       -rtsopts
  hs-source-dirs:      bench
  main-is:             Bench.hs
  -- other-modules:         
  build-depends:         base
                       , algo-s
                       , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erochest/algo-s
